--- a/my_classify_wrapper/build.gradle
+++ b/my_classify_wrapper/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:8.0.2'
     }
 }
 
@@ -27,12 +27,13 @@ android {
         noCompress "tflite"
     }
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
+        sourceCompatibility = '17'
+        targetCompatibility = '17'
     }
     lintOptions {
         abortOnError false
     }
+    namespace 'org.tensorflow.lite.classify'
 }
 
 dependencies {
