--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Use the most recent version of CameraX, currently that is alpha06.
-    def camerax_version = '1.0.0-alpha06'
+    def camerax_version = '1.3.0-alpha07'
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-video:${camerax_version}"
+
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
 
     implementation project(":my_classify_wrapper")
 }
