--- a/my_classify_wrapper/build.gradle
+++ b/my_classify_wrapper/build.gradle
@@ -37,9 +37,8 @@ android {
 }
 
 dependencies {
-    api 'org.checkerframework:checker-qual:3.21.2'
-    api 'org.tensorflow:tensorflow-lite:2.8.0'
-    api 'org.tensorflow:tensorflow-lite-support:0.3.1'
-    implementation 'org.tensorflow:tensorflow-lite-metadata:0.3.1'
-    //implementation 'org.apache.commons:commons-compress:1.21'
+    implementation 'org.checkerframework:checker-qual:3.21.2'
+    implementation 'org.tensorflow:tensorflow-lite:2.12.0'
+    api 'org.tensorflow:tensorflow-lite-support:0.4.3'
+    api 'org.tensorflow:tensorflow-lite-metadata:0.4.3'
 }
